Reorder cat qualities and add spacing, fix CSS errors

--- a/style.css
+++ b/style.css
@@ -1,17 +1,21 @@
 body {
-    font-family: 'Cinzel Decorative', serif;
-    background-color: #f9f3f0;
+  font-family: 'Cinzel Decorative', serif;
+   background-color: #f9f3f0;
     color: #333;
     margin: 40px;
 }
 
 h1 {
-  font-weight: 800
+  font-weight: 800;
   color: #d89a9a;
   text-align: center;
 }
 h2 {
-  font-weight: 600
+  font-weight: 600;
+}
+
+.qualities-list li {
+  margin: 15px 0;
 }
 img {
   max-width: 100%;
@@ -29,4 +33,8 @@ img {
 p {
   line-height: 1.6;
   margin: 20px 0;
+}
+
+.qualities-list li {
+  margin: 15px 0;
 }
